# prescripto-full-stack

./: .gitignore
admin/: .gitignore  index.html
admin/src/: App.jsx  index.css
admin/src/assets/: assets.js
admin/src/components/: Navbar.jsx
admin/src/context/: DoctorContext.jsx
admin/src/pages/Admin/: AddDoctor.jsx
admin/src/pages/Doctor/: DoctorAppointments.jsx  DoctorDashboard.jsx  DoctorLogin.jsx  DoctorProfile.jsx  Verify.jsx
backend/: .env
backend/controllers/: doctorController.js  userController.js
frontend/: .env  .gitignore  index.html  package-lock.json
frontend/src/: App.jsx
frontend/src/assets/: assets.js
frontend/src/components/: Banner.jsx  Footer.jsx  Header.jsx  Navbar.jsx  RelatedDoctors.jsx  SpecialityMenu.jsx  TopDoctors.jsx
frontend/src/pages/: About.jsx  Appointment.jsx  Contact.jsx  DoctorLogin.jsx  Doctors.jsx  Home.jsx  Login.jsx  MyAppointments.jsx  MyProfile.jsx  Register.css  Register.jsx  Verify.jsx  WaitingCount.jsx  counter.jsx
pybackend/: .dockerignore  .gitignore  Dockerfile  db.py  main.py  pyproject.toml  repo_structure.txt  requirements.txt
