[tool.poetry]
name = "prescripto-full-stack"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
# add your dependencies here if needed
fastapi = "^0.115.0"
uvicorn = "^0.26.0"
# ...other packages

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
